package com.java.train;

public class Conductor extends Employe {

    public Conductor(){
        super();
    }
    public Conductor(String nom, String prenom, int age, double salaire){
        super(nom, prenom, age, salaire);
    }
}
