package com.java.train;

public class Locomotive extends Voiture {

    Conductor conductor;
}
