package com.java.train;

public class Passager extends Personne {

    public Passager(){

    }

    public Passager(String nom, String prenom, int age){
        super(nom, prenom, age);
    }
}
