package com.java.train;


public class Voiture {
    int id;

    public Voiture(){

    }
}
