package com.java.train;

import java.util.ArrayList;

public class Wagon extends Voiture {
    ArrayList<Passager> passagers = new ArrayList<>();

    public Wagon(){

    }
}
