@startuml

title __TRAIN's Class Diagram__\n

  package  {
    package com.java.train {
      class Conductor {
          + Conductor()
          + Conductor()
      }
    }
  }
  

  package  {
    package com.java.train {
      class Employe {
          ~ salaire : double
          + Employe()
          + Employe()
      }
    }
  }
  

  package  {
    package com.java.train {
      class Locomotive {
      }
    }
  }
  

  package  {
    package com.java.train {
      class Passager {
          + Passager()
          + Passager()
      }
    }
  }
  

  package  {
    package com.java.train {
      class Personne {
          ~ nom : String
          ~ prenom : String
          ~ age : int
          + Personne()
          + Personne()
      }
    }
  }
  

  package  {
    package com.java.train {
      class Voiture {
          ~ id : int
          + Voiture()
      }
    }
  }
  

  package  {
    package com.java.train {
      class Wagon {
          ~ passagers : ArrayList<Passager>
          + Wagon()
      }
    }
  }
  

  Conductor -up-|> Employe
  Employe -up-|> Personne
  Locomotive -up-|> Voiture
  Locomotive o-- Conductor : conductor
  Passager -up-|> Personne
  Wagon -up-|> Voiture


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
